<resources>
    <string name="app_name">LocMess</string>
    <string name="emailField">example@domain.com</string>
    <string name="passwordField">password</string>
    <string name="logInField">Log In</string>
    <string name="registerField">Don\'t have and account yet? Sign here!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">LogMessApp</string>
    <string name="registerButton">Register</string>

    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>

    <string name="title_activity_loc_mess_drawer">LocMess</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="received_messages">Received petera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_locations">All locations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_locations">My locations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_profile">Profilians</string>

    <string name="title_create_message">New Message</string>

    <string name="title_create_location">New Location</string>
    <string name="title_activity_maps_create">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
